@@ -91,6 +91,7 @@ sk_sp<const GrGLInterface> GrGLMakeAssembledGLESInterface(void *ctx, GrGLGetProc
     GET_PROC(GenTextures);
     GET_PROC(GetBufferParameteriv);
     GET_PROC(GetError);
+    GET_PROC(GetFloatv);
     GET_PROC(GetIntegerv);
     GET_PROC(GetProgramInfoLog);
     GET_PROC(GetProgramiv);
@@ -425,6 +426,7 @@ sk_sp<const GrGLInterface> GrGLMakeAssembledGLESInterface(void *ctx, GrGLGetProc
         GET_PROC(BindSampler);
         GET_PROC(DeleteSamplers);
         GET_PROC(GenSamplers);
+        GET_PROC(SamplerParameterf);
         GET_PROC(SamplerParameteri);
         GET_PROC(SamplerParameteriv);
     }
