@@ -32,7 +32,7 @@
       "EnableVertexAttribArray", "Finish", "Flush",
       "FrontFace", "GenBuffers",
       "GenTextures", "GetBufferParameteriv", "GetError",
-      "GetIntegerv", "GetProgramInfoLog",
+      "GetFloatv", "GetIntegerv", "GetProgramInfoLog",
       "GetProgramiv", "GetShaderInfoLog",
       "GetShaderiv", "GetString",
       "GetUniformLocation", "IsTexture", "LineWidth", "LinkProgram", "PixelStorei",
@@ -46,6 +46,11 @@
       "VertexAttrib2fv", "VertexAttrib3fv", "VertexAttrib4fv", "VertexAttribPointer",
       "Viewport",
     ],
+
+    // TODO: Remove 'optional' once Chrome sets this function in the interface.
+    "optional": [
+      "GetFloatv",
+    ]
   },
   { // GL exclusive core functions
     "GL":    [{"ext": "<core>"}],
@@ -610,8 +615,11 @@
 
     "functions": [
       "BindSampler", "DeleteSamplers", "GenSamplers",
-      "SamplerParameteri", "SamplerParameteriv",
+      "SamplerParameterf", "SamplerParameteri", "SamplerParameteriv",
     ],
+
+    // TODO: Remove 'optional' once Chrome sets this function in the interface.
+    "optional": ["SamplerParameterf"]
   },
 
   {
